Fix minor overflow bug on smaller devices.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,7 @@ canvas {
 }
 
 .round-div-left {
+  background-color: red;
   opacity: 0.5;
   position: absolute;
   border-radius: 50%;
@@ -51,6 +52,7 @@ canvas {
 }
 
 .round-div-right {
+  background-color: blue;
   opacity: 0.5;
   position: absolute;
   border-radius: 50%;
